# rust-basic-crud

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: controllers.rs  db.rs  main.rs  models.rs
